--- a/css/format.css
+++ b/css/format.css
@@ -1,7 +1,32 @@
+:root {
+	--super-color: #b80c09;
+	--super-color: #f8f32b;
+	--super-color: #8aa399;
+	--super-color: #7d84b2;
+	--super-color: #db5461;
+	--font-color: #333;
+}
+
 body {
 	margin: 0;
 	overflow-y: scroll;
-	background: #eee;
+	background: #ddd;
 	font-family: sans-serif;
-	font-size: 16px;
+	font-size: 14px;
+	position: relative;
+	padding-left: 330px;
+	padding-top: 90px;
+	/*min-height: 100vh;*/
+	color: var(--font-color);
+}
+
+a {
+	color: inherit;
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+input,
+textarea {
+	font: inherit;
 }
