--- a/css/format.css
+++ b/css/format.css
@@ -14,8 +14,8 @@ body {
 	font-family: sans-serif;
 	font-size: 14px;
 	position: relative;
-	padding-left: 330px;
-	padding-top: 90px;
+	padding: 90px 30px 30px 330px;
+	padding: 60px 0 0 300px;
 	/*min-height: 100vh;*/
 	color: var(--font-color);
 }
