--- a/css/leftmenu.css
+++ b/css/leftmenu.css
@@ -43,6 +43,12 @@ menu ul li a:hover {
 	border-left-width: 6px;
 }
 
+menu ul li.active a {
+	color: #fff;
+	background: var(--super-color);
+	border-left-width: 6px;
+}
+
 menu ul li ul li a {
 	padding-left: 30px;
 }
