--- a/css/topmenu.css
+++ b/css/topmenu.css
@@ -16,12 +16,15 @@ nav {
 
 nav > a {
 	background: var(--super-color);
+	border-radius: 10px;
 	color: #fff;
-	width: 60px;
-	line-height: 60px;
+	width: 40px;
+	line-height: 40px;
+	height: 40px;
+	margin: 10px 0 0 10px;
 	font-weight: normal;
 	text-decoration: none;
-	font-size: 1.5em;
+	font-size: 1.3em;
 }
 
 #area_di_ricerca {
@@ -42,6 +45,7 @@ nav > a {
 }
 
 #area_di_ricerca input[type="submit"] {
+	color: rgba(255, 255, 255, .8);
 	background: var(--super-color);
 	border: 2px solid var(--super-color);
 	border-left: 0;
