--- a/css/leftmenu.css
+++ b/css/leftmenu.css
@@ -12,6 +12,10 @@ menu {
 	background: #333;
 	color: #eee;
 	z-index: 90;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 menu ul {
@@ -59,11 +63,6 @@ menu > ul > li > ul > li > a {
 }
 
 menu > ul:last-child {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	padding-bottom: 40px;
 	background: #222;
 }
 
