--- a/css/form.css
+++ b/css/form.css
@@ -49,7 +49,7 @@ section form fieldset label .input:focus {
 	border-color: var(--super-color);
 }
 
-section form input[type='submit'] {
+form .button {
 	margin: 30px auto 0 auto;
 	border: 0;
 	display: block;
@@ -65,14 +65,14 @@ section form input[type='submit'] {
 	transition: .3s;
 }
 
-section form input[type='submit']:not([disabled]) {
+form .button:not([disabled]) {
 	cursor: pointer;
 }
 
-section form input[type='submit'][disabled] {
+form .button[disabled] {
 	opacity: .5;
 }
 
-section form input[type='submit']:not([disabled]):hover {
+form .button:not([disabled]):hover {
 	box-shadow: 0 0 20px rgba(0, 0, 0, .4);
 }
