--- a/css/topmenu.css
+++ b/css/topmenu.css
@@ -33,7 +33,7 @@ nav > a {
 	height: 30px;
 }
 
-#area_di_ricerca div.dropdown_selecter > label {
+#area_di_ricerca > div > label {
 	border-right: 0;
 	border-radius: 10px 0 0 10px;
 }
