--- a/css/content.css
+++ b/css/content.css
@@ -12,53 +12,81 @@ section > h1 {
 	font-size: 2em;
 }
 
-#presentation {
+header {
 	flex-grow: 1;
 	display: flex;
 	flex-wrap: nowrap;
 }
 
-#presentation > img {
+header > div.left {
+	margin-right: 30px;
+}
+
+header > div.right {
+}
+
+header > div.left img {
 	width: 200px;
 	height: 250px;
 	border-radius: 3px;
 	object-fit: cover;
-	margin-right: 30px;
 }
 
-#presentation > div {
+header > div.right {
 	flex-grow: 1;
-	width: calc(100% - 30px - 200px);
 }
 
-#presentation > div h1 {
+header > div.right h1 {
+	margin: 0;
 	font-size: 2.1em;
-	margin: 0 0 10px 0;
 }
 
-#presentation > div p {
+header > div.right p {
 	margin: 10px 0 0 0;
 }
 
-#title {
+header > div.right .tags {
+	margin-top: 7px;
+}
+
+header .actions {
+	width: auto;
 	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
+	flex-wrap: nowrap;
+	margin-top: 10px;
 }
 
-#title h1 {
-	margin: 0;
+header .actions a {
+	display: block;
+	padding: 0 7px;
+	line-height: 22px;
+	color: rgba(255, 255, 255, .7);
+	background: var(--super-color);
+	border: 2px solid #005383;
+	border-right-width: 0;
+	font-weight: normal;
+	text-decoration: none;
+	transition: .3s;
+	cursor: pointer;
 }
 
-#title .tags {
-	margin-left: 10px;
+header .actions a:first-child {
+	margin-left: 0;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
 }
 
-#title p {
-	margin-left: 10px;
+header .actions a:last-child {
+	border-right-width: 2px;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
 }
 
-.group > label {
+header .actions a:hover {
+	background: #005383;
+}
+
+.dashboard > label {
 	display: inline-block;
 	font-size: 1.3em;
 	line-height: 40px;
@@ -67,7 +95,7 @@ section > h1 {
 	border-radius: 2px;
 }
 
-.group ul {
+.dashboard ul {
 	margin: 0;
 	padding: 20px 0 0 0;
 	display: grid;
@@ -76,19 +104,37 @@ section > h1 {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.group ul li {
-	display: block;
+.dashboard ul li {
 	list-style: none;
+	display: block;
+}
+
+.dashboard ul.info_pv li a {
+	display: block;
+	padding: 0 20px;
+	line-height: 50px;
+	background: #f5f5f5;
+	text-decoration: none;
+	border-radius: 2px;
+	transition: .3s;
+}
+
+.dashboard ul.info_pv li:hover a {
+	background: #fff;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+}
+
+.dashboard ul.foto_pv li {
 	position: relative;
 }
 
-.group ul li a {
+.dashboard ul.foto_pv li a {
 	display: block;
 	text-decoration: none;
 	font: inherit;
 }
 
-.group ul li a img {
+.dashboard ul.foto_pv li a img {
 	display: block;
 	width: 100%;
 	height: 230px;
@@ -97,18 +143,18 @@ section > h1 {
 	transition: .2s;
 }
 
-.group ul li a:hover img {
+.dashboard ul.foto_pv li a:hover img {
 	transform: scale(1.03);
 }
 
-.group ul li a span {
+.dashboard ul.foto_pv li a span {
 	display: block;
 	padding: 5px 0;
 	line-height: 1.2em;
 	background: #ddd;
 }
 
-.group ul li label {
+.dashboard ul.foto_pv li label {
 	display: block;
 	position: absolute;
 	top: 0;
@@ -125,40 +171,4 @@ section > h1 {
 
 	border-radius: 100%;
 	background: var(--super-color);
-}
-
-.socialbar {
-	width: auto;
-	display: flex;
-	flex-wrap: nowrap;
-	margin-top: 15px;
-	margin-bottom: 20px;
-}
-
-.socialbar a {
-	display: block;
-	padding: 0 5px;
-	line-height: 22px;
-	color: rgba(255, 255, 255, .7);
-	background: var(--super-color);
-	border: 2px solid #005383;
-	border-right-width: 0;
-	font-weight: normal;
-	text-decoration: none;
-	transition: .3s;
-	cursor: pointer;
-}
-
-.socialbar a:first-child {
-	margin-left: 0;
-	border-radius: 3px 0 0 3px;
-}
-
-.socialbar a:last-child {
-	border-radius: 0 3px 3px 0;
-	border-right-width: 2px;
-}
-
-.socialbar a:hover {
-	background: #005383;
 }
