--- a/css/format.css
+++ b/css/format.css
@@ -5,6 +5,8 @@
 	--super-color: #7d84b2;
 	--super-color: #db5461;
 	--super-color: #07b;
+	--dark-color: #058;
+	--error-color: #a33;
 	--font-color: #333;
 	--background: #ddd;
 }
