--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,4 @@
-section form fieldset {
+.form fieldset {
 	width: 700px;
 	border: 0;
 	padding: 0;
@@ -8,22 +8,22 @@ section form fieldset {
 	grid-column-gap: 30px;
 }
 
-section form fieldset label {
+.form fieldset label {
 	display: block;
 	margin-bottom: 20px;
 }
 
-section form fieldset label:last-child {
+.form fieldset label:last-child {
 	margin-bottom: 0;
 }
 
-section form fieldset label span {
+.form fieldset label span {
 	display: block;
 	width: 150px;
 	margin-bottom: 10px;
 }
 
-section form fieldset label .input {
+.form fieldset label .input {
 	width: 100%;
 	height: 40px;
 	padding: 0;
@@ -34,18 +34,18 @@ section form fieldset label .input {
 	transition: .3s;
 }
 
-section form fieldset label p {
+.form fieldset label p {
 	display: block;
 	padding: 0 10px;
 	margin: 10px 0 0 0;
-	color: #a33;
+	color: var(--error-color);
 }
 
-section form fieldset label .input:hover {
+.form fieldset label .input:hover {
 	border-color: #ccc;
 }
 
-section form fieldset label .input:focus {
+.form fieldset label .input:focus {
 	border-color: var(--super-color);
 }
 
