--- a/css/risultati_di_ricerca.css
+++ b/css/risultati_di_ricerca.css
@@ -11,15 +11,17 @@
 	grid-gap: 30px;
 }
 
+#risultati_di_ricerca .risultati > * {
+	background: #eee;
+}
+
 #risultati_di_ricerca .risultati > p {
 	margin: 0;
-	background: #eee;
 	padding: 20px;
 	border-radius: 2px;
 }
 
 #risultati_di_ricerca .risultati > div {
-	background: #eee;
 	padding: 20px;
 	border-radius: 2px;
 }
@@ -85,22 +87,23 @@
 
 #risultati_di_ricerca .risultati > div > div:last-child a:hover {
 	color: rgba(255, 255, 255, .7);
-	/*background: var(--super-color);*/
 	box-shadow: inset 0 25px 0 var(--super-color);
 }
 
 #risultati_di_ricerca .risultati > a {
+	justify-self: stretch;
+	align-self: flex-start;
 	display: block;
 	padding: 0 20px;
 	line-height: 55px;
-	background: #fff;
 	border-radius: 2px;
 	text-decoration: none;
 	transition: .3s;
 }
 
 #risultati_di_ricerca .risultati > a:hover {
-	box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+	background: #f5f5f5;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .1);
 }
 
 #risultati_di_ricerca .filtri {
