Riduzione delle funzionalità necessaria
Le liste e i suggerimenti sono stati rimossi dal sito, e saranno rimossi dal RAD al più presto. A fronte di questo cambiamento, <film guardati> si chiamano <giudizi> e <film da guardare> si chiamano <promemoria>.

--- a/css/content.css
+++ b/css/content.css
@@ -193,6 +193,7 @@ header .actions a:hover {
 }
 
 .dashboard ul.foto_pv li div label[data-action] {
+	font-size: 0.75em;
 	transition: .3s;
 	cursor: pointer;
 }
