--- a/css/risultati_di_ricerca.css
+++ b/css/risultati_di_ricerca.css
@@ -1,44 +1,37 @@
 #risultati_di_ricerca {
 	display: grid;
-	/*grid-template-columns: calc(70% - 15px) calc(30% - 15px);*/
-	grid-template-columns: 7fr 3fr;
-	grid-gap: 30px;
-}
-
-#risultati_di_ricerca .risultati {
-	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 30px;
 }
 
-#risultati_di_ricerca .risultati > * {
+#risultati_di_ricerca > * {
 	background: #eee;
 }
 
-#risultati_di_ricerca .risultati > p {
+#risultati_di_ricerca > p {
 	margin: 0;
 	padding: 20px;
 	border-radius: 2px;
 }
 
-#risultati_di_ricerca .risultati > div {
+#risultati_di_ricerca > div {
 	padding: 20px;
 	border-radius: 2px;
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child {
+#risultati_di_ricerca > div > div:first-child {
 	display: flex;
 	flex-wrap: nowrap;
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child > a {
+#risultati_di_ricerca > div > div:first-child > a {
 	display: block;
 	width: 100px;
 	height: 125px;
 	margin-right: 10px;
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child > a img {
+#risultati_di_ricerca > div > div:first-child > a img {
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -46,26 +39,26 @@
 	border-radius: 2px;
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child > div {
+#risultati_di_ricerca > div > div:first-child > div {
 	width: calc(100% - 100px - 10px);
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child > div h1 {
+#risultati_di_ricerca > div > div:first-child > div h1 {
 	display: block;
 	margin: 0 0 10px 0;
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child > div h1 a {
+#risultati_di_ricerca > div > div:first-child > div h1 a {
 	font-weight: normal;
 	text-decoration: none;
 	transition: .3s;
 }
 
-#risultati_di_ricerca .risultati > div > div:first-child > div h1 a:hover {
+#risultati_di_ricerca > div > div:first-child > div h1 a:hover {
 	color: var(--super-color);
 }
 
-#risultati_di_ricerca .risultati > div > div:last-child {
+#risultati_di_ricerca > div > div:last-child {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -73,7 +66,7 @@
 	margin: 5px -5px -5px -5px;
 }
 
-#risultati_di_ricerca .risultati > div > div:last-child a {
+#risultati_di_ricerca > div > div:last-child a {
 	margin: 5px;
 	display: block;
 	font-weight: normal;
@@ -85,12 +78,12 @@
 	transition: .2s;
 }
 
-#risultati_di_ricerca .risultati > div > div:last-child a:hover {
+#risultati_di_ricerca > div > div:last-child a:hover {
 	color: rgba(255, 255, 255, .7);
 	box-shadow: inset 0 25px 0 var(--super-color);
 }
 
-#risultati_di_ricerca .risultati > a {
+#risultati_di_ricerca > a {
 	justify-self: stretch;
 	align-self: flex-start;
 	display: block;
@@ -101,12 +94,7 @@
 	transition: .3s;
 }
 
-#risultati_di_ricerca .risultati > a:hover {
+#risultati_di_ricerca > a:hover {
 	background: #f5f5f5;
 	box-shadow: 0 0 20px rgba(0, 0, 0, .1);
-}
-
-#risultati_di_ricerca .filtri {
-	display: block;
-	background: #eee;
 }
