Introduzione gestione di film e artisti
Per film: introduzione <aggiungi film>, <modifica film>, <rimuovi film>, e preparazione per <aggiorna partecipazione artisti in film> e <aggiorna generi in film>. Questi ultimi non sono ancora funzionanti.
Per artisti: introduzione <aggiungi artista>, <modifica artista>.
Inoltre, la modifica del film non prevede la modifica della copertina. Ci vuole una funzione apposita. Stesso per faccia di artista.
P.S.: alcuni fake-link che usavano data-action e data-id sono stati trasformati in link puri.

--- a/css/content.css
+++ b/css/content.css
@@ -115,7 +115,7 @@ header .actions a:hover {
 	display: block;
 }
 
-.dashboard ul.info_pv li a {
+.dashboard ul.info_pv > li > a {
 	display: block;
 	padding: 0 20px;
 	line-height: 50px;
@@ -176,7 +176,7 @@ header .actions a:hover {
 	font-size: 1.1em;
 }
 
-.dashboard ul.foto_pv li div label {
+.dashboard ul.foto_pv li div a {
 	display: block;
 	margin-left: 5px;
 
@@ -188,16 +188,18 @@ header .actions a:hover {
 	background: var(--super-color);
 }
 
-.dashboard ul.foto_pv li div label:first-child {
+.dashboard ul.foto_pv li div a:first-child {
 	margin-left: 0;
 }
 
-.dashboard ul.foto_pv li div label[data-action] {
+.dashboard ul.foto_pv li div a[href],
+.dashboard ul.foto_pv li div a[data-action] {
 	font-size: 0.75em;
 	transition: .3s;
 	cursor: pointer;
 }
 
-.dashboard ul.foto_pv li div label[data-action]:hover {
+.dashboard ul.foto_pv li div a[href]:hover,
+.dashboard ul.foto_pv li div a[data-action]:hover {
 	background: var(--error-color);
 }
