--- a/css/format.css
+++ b/css/format.css
@@ -18,8 +18,7 @@ body {
 	font-family: sans-serif;
 	font-size: 14px;
 	position: relative;
-	padding: 90px 30px 30px 330px;
-	padding: 60px 0 0 300px;
+	padding: 60px 0 60px 300px;
 	/*min-height: 100vh;*/
 	color: var(--font-color);
 }
