--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,6 @@
 .form {
 	width: 700px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 60px auto;
 }
 
 .form > h1 {
@@ -95,6 +94,51 @@
 	margin: 0 5px 0 0;
 }
 
+.form fieldset .rows {
+}
+
+.form fieldset .rows > div {
+	position: relative;
+	padding-right: 40px;
+}
+
+.form fieldset .rows > div.r2 {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-gap: 20px;
+}
+
+.form fieldset .rows > div > .deleter {
+	position: absolute;
+	top: 5px;
+	right: 0;
+}
+
+.form fieldset .rows > .adder {
+	margin-top: 5px;
+	display: inline-block;
+}
+
+.form fieldset .rows > .adder,
+.form fieldset .rows > div > .deleter {
+	width: 30px;
+	line-height: 30px;
+	text-align: center;
+	border-radius: 100%;
+	background: var(--super-color);
+	color: #fff;
+	font-size: 0.9em;
+	font-weight: bold;
+	text-decoration: none;
+	transition: .3s;
+	cursor: pointer;
+}
+
+.form fieldset .rows > .adder:hover,
+.form fieldset .rows > div > .deleter:hover {
+	background: var(--dark-color);
+}
+
 .form fieldset label p {
 	display: block;
 	padding: 0 10px;
@@ -103,7 +147,7 @@
 }
 
 form .button {
-	margin: 30px auto 0 auto;
+	margin: 0 auto;
 	border: 0;
 	display: block;
 	padding: 0 30px;
