--- a/css/content.css
+++ b/css/content.css
@@ -91,13 +91,14 @@ header .actions a:hover {
 	font-size: 1.3em;
 	line-height: 40px;
 	padding: 0 20px;
+	margin-bottom: 20px;
 	background: rgba(0, 0, 0, .15);
 	border-radius: 2px;
 }
 
 .dashboard ul {
 	margin: 0;
-	padding: 20px 0 0 0;
+	padding: 0;
 	display: grid;
 	grid-gap: 20px;
 }
